Fixing card clipping issue

--- a/web3-live-demo/src/dependencies/styles/card.css
+++ b/web3-live-demo/src/dependencies/styles/card.css
@@ -10,7 +10,7 @@
 .card {
   position: relative;
   width: 400px;
-  height: 550px;
+  height: 650px;
 
   /* width: 100%;
   height: 30rem; */
